<resources>
    <string name="app_name">NofarAlfasi-FinalProject</string>
    <string name="title_activity_temp_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="underline"><u>underline</u></string>
    <string name="permission_rationale">“Contacts permissions are needed for providing email completions.”</string>
    <string name="enterFirstName">First Name</string>
    <string name="enterLastName">Last Name</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="className">Course Name</string>
    <string name="classCredit">Course Points</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="addCoursesTime">Add course\'s days and hours</string>
    <string name="courseColor">Pick Color</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="signUpRequest">No account yet? Create one</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Next">Next</string>
    <string name="Done">Done</string>
    <string name="AddHours">Add Time</string>
    <string name="Class">Class:</string>
    <string name="Term">Term:</string>
    <string name="ToDate">To Date:</string>
    <string name="ToTime">To Time:</string>
    <string name="Reminder">Reminder:</string>
    <string name="TaskName">Task Name</string>
    <string name="Priority">Priority:</string>
    <string name="sunday">Sun.</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="navCalendar">Calendar</string>
    <string name="navExams">Exams</string>
    <string name="navClasses">Classes</string>
    <string name="navHomework">HomeWorks</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Delete">DELETE</string>
    <string name="Points">Points: </string>
    <string name="chooseGrade">Choose Grade</string>
    <string name="average">Average:</string>
    <string name="timeLeft">Submit Days:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="noGrade">\?</string>
    <string name="error">Error</string>
    <string name="noTime">No Times</string>
    <string name="addExam">Add Exam</string>
    <string name="noclassesfound">No Classes Found</string>
    <string name="editExam">Edit Exam</string>
    <string name="missingInfo">Missing Info</string>
    <string name="termtaken">Term Taken For This Class</string>
    <string name="exaontime">Another Exam On That Time</string>
    <string name="addHomeWork">Add HomeWork</string>
    <string name="noclassfound">No Classes Found</string>
    <string name="editHomeWork">Edit HomeWork</string>
    <string name="DuplicateTaskName">Duplicate Task Name</string>
    <string name="unGraded">UnGraded</string>
    <string name="Graded">Graded</string>
    <string name="uncompleteed">UnCompleted</string>
    <string name="completed">Completed</string>
    <string name="homeWork">HomeWork</string>
    <string name="exam">Exam</string>
    <string name="term">Term</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="navStudyGroup">Study Groups</string>
    <string name="Max_Participants">Max Participants:</string>
    <string-array name="nav_titles">
        <item>HomeWorks</item>
        <item>Classes</item>
        <item>Exams</item>
        <item>Calendar</item>
        <item>StudyGroups</item>
        <item>Chat Room</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="addStudyGroup">Study Group</string>
    <string name="editStudyGroup">Edit Study Group</string>
    <string name="studygroupontime">another study group on that time</string>
    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_sign_out">Sign out</string>
    <string name="email_registration">Email Registration</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="navChatRoom">Chat Room</string>
    <string name="studyGroup">Study Group</string>
    <string name="SGName">Study Group Title:</string>
</resources>
